Home Page now uses template parsing

--- a/assets/templates/pages/home.tmpl
+++ b/assets/templates/pages/home.tmpl
@@ -1,5 +1,1 @@
-{{define "page:title"}}Example page{{end}}
-
-{{define "page:main"}}
-<p>This is an example page.</p>
-{{end}}
+<h1>Welcome to my best site!</h1>
