--- a/assets/templates/pages/contact.tmpl
+++ b/assets/templates/pages/contact.tmpl
@@ -1,4 +1,8 @@
+{{template "header" .}}
+
 <h1>Contact Page</h1>
 <p>
    To get in touch, email me at <a href="mailto:yogidk@gmail.com">yogidk@gmail</a>!
 </p>
+
+{{template "footer" .}}
