--- a/assets/templates/pages/contact.tmpl
+++ b/assets/templates/pages/contact.tmpl
@@ -1,8 +1,9 @@
 {{template "header" .}}
 
-<h1>Contact Page</h1>
-<p>
-   To get in touch, email me at <a href="mailto:yogidk@gmail.com">yogidk@gmail</a>!
+<div class="px-6">
+<h1 class="py-4 text-4xl semibold font-serif tracking-tight">Contact Page</h1>
+<p class="text-gray-800 font-serif">
+   To get in touch, email me at <a class="underline" href="mailto:yogidk@gmail.com">yogidk@gmail</a>!
 </p>
 
 {{template "footer" .}}
