--- a/assets/templates/pages/home.tmpl
+++ b/assets/templates/pages/home.tmpl
@@ -1,5 +1,7 @@
 {{template "header" .}}
 
-<h1>Welcome to my best site!</h1>
+<div class="px-6">
+    <h1 class="py-4 text-4xl semibold font-serif tracking-tight">Welcome to my best site!</h1>
+</div>
 
 {{template "footer" .}}
