--- a/assets/templates/pages/contact.tmpl
+++ b/assets/templates/pages/contact.tmpl
@@ -5,5 +5,6 @@
 <p class="text-gray-800 font-serif">
    To get in touch, email me at <a class="underline" href="mailto:yogidk@gmail.com">yogidk@gmail</a>!
 </p>
+</div>
 
 {{template "footer" .}}
