--- a/assets/templates/pages/tailwind.tmpl
+++ b/assets/templates/pages/tailwind.tmpl
@@ -6,25 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
-<header class="font-serif bg-gradient-to-r from-purple-700 to-pink-500 text-white">
-<nav class="px-8 py-4 flex items-center justify-between ">
-  <div class="text-2xl">LensView 📷  </div>
-  <div>
-    <a class="text-lg font-semibold hover:text-blue-100 px-2" href="/">Home</a>
-    <a class="text-lg font-semibold hover:text-blue-100 px-2" href="/contact">Contact</a>
-    <a class="text-lg font-semibold hover:text-blue-100 px-2" href="/faq">FAQ</a>
-  </div>
-  <div>
-    <a class="pr-4" href="/#">Sign In</a>
-    <a class="px-2 py-1 bg-blue-500 rounded hover:bg-blue-600" href="/#">Sign Up</a>
-  </div>
-</header>
+
+<body class="flex flex-col min-h-screen">
+
+  <header class="font-serif bg-gradient-to-r from-purple-700 to-pink-500  text-white">
+    <nav class="px-8 py-4 flex items-center justify-between ">
+      <div class="text-2xl">LensView 📷  </div>
+      <div>
+        <a class="text-lg font-semibold hover:text-blue-100 px-2" href="/">Home</a>
+        <a class="text-lg font-semibold hover:text-blue-100 px-2" href="/contact">Contact</a>
+        <a class="text-lg font-semibold hover:text-blue-100 px-2" href="/faq">FAQ</a>
+      </div>
+      <div>
+        <a class="pr-4" href="/#">Sign In</a>
+        <a class="px-2 py-1 bg-blue-500 rounded hover:bg-blue-600" href="/#">Sign Up</a>
+      </div>
+    </nav>
+  </header>
 {{end}}
 
 <!-- All pages come here -->
 
 {{define "footer"}}
-    </body>
-    </html>
+  <footer class="mt-auto font-serif bg-blue-500 text-white">
+    <div class="text-xs text-center  hover:text-blue-100 px-2">
+            <p>&copy; 2024 TimeWiseSolutions (support@timewisesolutions.com.au). All rights reserved.</p>
+    </div>
+  </footer>
+</body>
+</html>
 {{end}}
