Basic signup page created and automated date in footer added

--- a/assets/templates/pages/tailwind.tmpl
+++ b/assets/templates/pages/tailwind.tmpl
@@ -19,7 +19,7 @@
       </div>
       <div>
         <a class="pr-4" href="/#">Sign In</a>
-        <a class="px-2 py-1 bg-blue-500 rounded hover:bg-blue-600" href="/#">Sign Up</a>
+        <a class="px-2 py-1 bg-blue-500 rounded hover:bg-blue-600" href="/signup">Sign Up</a>
       </div>
     </nav>
   </header>
@@ -30,7 +30,7 @@
 {{define "footer"}}
   <footer class="mt-auto font-serif bg-blue-500 text-white">
     <div class="text-xs text-center  hover:text-blue-100 px-2">
-            <p>&copy; 2024 TimeWiseSolutions (support@timewisesolutions.com.au). All rights reserved.</p>
+            <p>Copyright &copy;  <script>document.write(/\d{4}/.exec(Date())[0])</script> TimeWiseSolutions.All rights reserved. (support@timewisesolutions.com.au) </p>
     </div>
   </footer>
 </body>
