--- a/assets/templates/pages/tailwind.tmpl
+++ b/assets/templates/pages/tailwind.tmpl
@@ -7,7 +7,7 @@
 <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
-<body class="flex flex-col min-h-screen">
+<body class="flex flex-col min-h-screen bg-gray-100">
 
   <header class="font-serif bg-gradient-to-r from-purple-700 to-pink-500  text-white">
     <nav class="px-8 py-4 flex items-center justify-between ">
