Prettier Formatting applied as HTML

--- a/assets/templates/pages/contact.tmpl
+++ b/assets/templates/pages/contact.tmpl
@@ -1,10 +1,11 @@
 {{template "header" .}}
 
 <div class="px-6">
-<h1 class="py-4 text-4xl semibold font-serif tracking-tight">Contact Page</h1>
-<p class="text-gray-800 font-serif">
-   To get in touch, email me at <a class="underline" href="mailto:yogidk@gmail.com">yogidk@gmail</a>!
-</p>
+  <h1 class="py-4 text-4xl semibold font-serif tracking-tight">Contact Page</h1>
+  <p class="text-gray-800 font-serif">
+    To get in touch, email me at
+    <a class="underline" href="mailto:yogidk@gmail.com">yogidk@gmail</a>!
+  </p>
 </div>
 
 {{template "footer" .}}
