--- a/assets/templates/pages/home.tmpl
+++ b/assets/templates/pages/home.tmpl
@@ -1,7 +1,9 @@
 {{template "header" .}}
 
 <div class="px-6">
-    <h1 class="py-4 text-4xl semibold font-serif tracking-tight">Welcome to my best site!</h1>
+  <h1 class="py-4 text-4xl semibold font-serif tracking-tight">
+    Welcome to my best site!
+  </h1>
 </div>
 
 {{template "footer" .}}
