SignIn View implemented

--- a/assets/templates/pages/tailwind.tmpl
+++ b/assets/templates/pages/tailwind.tmpl
@@ -30,7 +30,11 @@
           >
         </div>
         <div>
-          <a class="pr-4" href="/#">Sign In</a>
+          <a
+            class="pr-4 px-2 py-1 bg-blue-500 rounded hover:bg-blue-600"
+            href="/signin"
+            >Sign In</a
+          >
           <a
             class="px-2 py-1 bg-blue-500 rounded hover:bg-blue-600"
             href="/signup"
