--- a/assets/templates/pages/signup.tmpl
+++ b/assets/templates/pages/signup.tmpl
@@ -2,7 +2,7 @@
 
 <form action="/signup" method="POST">
   <div class="hidden">
-    {{.CSRFField}}
+    {{ csrfField }}
   </div>
   <div class="py-12 flex justify-center items-center">
     <div class="px-8 py-8 bg-white rounded shadow font-serif">
