--- a/assets/templates/pages/tailwind.tmpl
+++ b/assets/templates/pages/tailwind.tmpl
@@ -30,6 +30,12 @@
           >
         </div>
         <div>
+          <form action="/signout" method="post" class="inline pr-4">
+            <div class="hidden">
+              {{ csrfField }}
+            </div>
+            <button type="submit">Sign out</button>
+          </form>
           <a
             class="pr-4 px-2 py-1 bg-blue-500 rounded hover:bg-blue-600"
             href="/signin"
